--- a/themes/scalereal/static/scss/_blog.scss
+++ b/themes/scalereal/static/scss/_blog.scss
@@ -220,3 +220,8 @@
     color: #313131;
   }
 }
+  
+@media only screen and (max-width: 766px) {
+  .popular-reads-section .sub-text {
+    margin-bottom: 20px; }
+}
